Add PepperPy Core Cursor Rules, update dependencies, and implement initial TUI components
- Introduced a comprehensive set of cursor rules for code style, documentation, testing, security, and performance.
- Updated `poetry.lock` to remove unused dependencies and added `textual` for TUI support.
- Implemented initial TUI components in `pepperpy_console/__init__.py`, including widgets and command structures for CLI and TUI functionalities.
- Ensured compatibility with Python 3.12 and maintained semantic versioning.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ packages = [{ include = "pepperpy_console" }]
 python = "^3.12"
 rich = "^13.7.0"
 pepperpy-core = "*"
+textual = "^0.52.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.0.0"
