--- a/pepperpy_console/themes/light.yaml
+++ b/pepperpy_console/themes/light.yaml
@@ -1,45 +1,24 @@
-name: Light
-
+name: light
 colors:
-  # Base colors
-  primary: "#1a73e8" # Blue
-  secondary: "#5f6368" # Gray
-  accent: "#d93025" # Red
-  background: "#ffffff" # White
-  text: "#202124" # Dark Gray
-  error: "#d93025" # Red
-  warning: "#f29900" # Orange
-  success: "#1e8e3e" # Green
-  info: "#1a73e8" # Blue
-  selection: "#e8f0fe" # Light Blue
-
-  # UI variants
-  surface: "#f8f9fa" # Light Gray
-  surface-darken-1: "#f1f3f4" # Darker Gray
-  surface-lighten-1: "#ffffff" # White
-  text-muted: "#5f6368" # Muted Gray
-  text-disabled: "#9aa0a6" # Light Gray
-  primary-lighten-2: "#4285f4" # Light Blue
-  primary-darken-1: "#1967d2" # Dark Blue
-  error-lighten-2: "#ea4335" # Light Red
-  success-lighten-2: "#34a853" # Light Green
-
-metrics:
-  spacing:
-    xs: 1
-    sm: 2
-    md: 4
-    lg: 8
-    xl: 16
-
-  sizes:
-    icon: 1
-    input: 3
-    header: 3
-    footer: 3
-    sidebar: 30
-
-  breakpoints:
-    sm: 40
-    md: 80
-    lg: 120
+  primary: "#000000"
+  secondary: "#ffffff"
+  accent: "#0066cc"
+  background: "#f5f5f5"
+  text: "#333333"
+  error: "#ff0000"
+  warning: "#ffa500"
+  success: "#00ff00"
+styles:
+  button:
+    color: primary
+    background: secondary
+    hover:
+      background: accent
+  text:
+    color: text
+  heading:
+    color: primary
+  link:
+    color: accent
+    hover:
+      color: primary
