--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ packages = [{ include = "pepperpy_console" }]
 [tool.poetry.dependencies]
 python = "^3.12"
 rich = "^13.9.4"
-pepperpy-core = "*"
+pepperpy-core = { version = "*", extras = ["type-stubs"] }
 textual = "^1.0.0"
 
 [tool.poetry.group.dev.dependencies]
@@ -40,23 +40,35 @@ python_version = "3.12"
 warn_return_any = true
 warn_unused_configs = true
 disallow_untyped_defs = true
-disallow_incomplete_defs = true
-check_untyped_defs = true
-disallow_untyped_decorators = true
-no_implicit_optional = true
-warn_redundant_casts = true
-warn_unused_ignores = true
-warn_no_return = true
-warn_unreachable = true
-strict_equality = true
 ignore_missing_imports = true
-mypy_path = "."
-explicit_package_bases = true
+
+[[tool.mypy.overrides]]
+module = "examples.*"
+ignore_errors = true
 
 [[tool.mypy.overrides]]
 module = "tests.*"
-disallow_untyped_defs = false
-check_untyped_defs = false
+ignore_errors = true
+
+[[tool.mypy.overrides]]
+module = "textual.*"
+ignore_missing_imports = true
+ignore_errors = true
+
+[[tool.mypy.overrides]]
+module = "pepperpy_console.tui.*"
+disable_error_code = [
+    "abstract",
+    "attr-defined",
+    "misc",
+    "union-attr",
+    "unused-coroutine",
+    "no-any-return",
+    "override",
+    "return-value",
+    "call-arg",
+    "assignment",
+]
 
 [tool.isort]
 profile = "black"
