--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.2.1"
 description = "PepperPy console package"
 authors = ["Felipe Pimentel <fpimentel88@gmail.com>"]
 readme = "README.md"
-packages = [{ include = "pepperpy_console" }]
+packages = [{ include = "pepperpy" }]
 
 [tool.poetry.dependencies]
 python = "^3.12"
@@ -28,7 +28,7 @@ requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.setuptools.package-data]
-"pepperpy_console" = ["py.typed"]
+"pepperpy" = ["py.typed"]
 
 [tool.pytest.ini_options]
 asyncio_mode = "strict"
@@ -56,7 +56,7 @@ ignore_missing_imports = true
 ignore_errors = true
 
 [[tool.mypy.overrides]]
-module = "pepperpy_console.tui.*"
+module = "pepperpy.tui.*"
 disable_error_code = [
     "abstract",
     "attr-defined",
@@ -78,7 +78,7 @@ force_grid_wrap = 0
 use_parentheses = true
 ensure_newline_before_comments = true
 line_length = 88
-known_first_party = ["pepperpy_console"]
+known_first_party = ["pepperpy"]
 known_third_party = ["rich", "textual", "structlog"]
 sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
 default_section = "THIRDPARTY"
